--- a/Public/index.html
+++ b/Public/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-device-with, initial-scale=1.0">
         <tittle>Document</tittle>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="public/js/Public/css/styles.css">
     </head>
     <body>
         <h1>Color Palette</h1>
